# mousai

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
mousai/: mousai.py  utils.py
mousai/player/: audio_player.py  playlist.py
mousai/stubs/mousai/: mousai.pyi  utils.pyi
mousai/stubs/mousai/player/: audio_player.pyi  playlist.pyi
tests/: test_mousai.py  test_utils.py
tests/player/: conftest.py  test_audiometadata.py  test_audioplayer.py  test_playlist.py  test_playlistitem.py
