[tool.poetry]
name = "mousai"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
eyed3 = "^0.9.6"
PySimpleGUI = "^4.56.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
mypy = {version = "^0.930", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
